--- a/404.html
+++ b/404.html
@@ -5,9 +5,9 @@ permalink: /404.html
 ---
 
 <div class="text-center">
-  <h1>Whoops, this page doesn't exist.</h1>
-  <h1>Move along. (404 error)</h1>
+  <h1>Oops, this page cannot be found.</h1>
+  <h1>Please return to the homepage.</h1>
   <br/>
 
-  <img src="{{ 'assets/img/404-southpark.jpg' | relative_url }}" alt="Not found" />
+  <img src="{{ 'assets/img/404-error-background-with-milk-carton(1).png' | relative_url }}" alt="Not found" />
 </div>
