--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 title: Judy's Work Portolio
-subtitle: Senior technical writer with 6-7 years of experience in the field. TEST
+subtitle: Senior technical writer with 6-7 years of experience in the field.
 ---
 <a href='http://www.freevisitorcounters.com'>Visitors</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=7f499772be50690d01d9ba393e0b3cee5d72f367'></script>
 <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1193803/t/13"></script>
