Add writing samples

--- a/writing_samples.html
+++ b/writing_samples.html
@@ -1,1 +1,47 @@
-writing samples
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Writing Samples</title>
+</head>
+<body>
+    <div>
+        <p>
+            <h2>Release notes</h2>
+            <ul>
+                <li><a href="assets/writing samples/release_note_sample.pdf">CS Platform ver. 1.0.13 Release Note</a></li>
+            </ul>
+        </p>
+    </div>
+    <div>
+        <p>
+            <h2>User guides</h2>
+            <ul>
+                <li><a href="assets/writing samples/CS platform ver 1.0.13 installation guide.pdf">CS Platform ver. 1.0.13 Installation Guide</a></li>
+                <li><a href="assets/writing samples/Service Cycle Guide EN _v2023013_no_logo.pdf">Service Cycle Guide</a></li>
+            </ul>
+        </p>
+            
+    </div>
+    <div>
+        <p>
+            <h2>Tutorials</h2>
+            <ul>
+                <li><a href="assets/writing samples/How can I embed the inline payment widget_modified">How can I embed the inline payment widget?</a></li>
+                <li><a href="https://www.qnap.com/en/how-to/tutorial/article/how-to-use-koimeeter">How to use Koimeeter</a></li>
+            </ul>
+        </p>
+
+    </div>
+    <div>
+        <p>         
+            <h2>Open source projects</h2>
+            <ul>
+                <li><a href="https://github.com/Codecademy/docs/issues/4800">Codecademy Docs</a></li>
+            </ul>   
+        </p>
+
+    </div>
+</body>
+</html>
