--- a/writing_samples.html
+++ b/writing_samples.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Writing Samples</title>
-</head>
-<body>
+---
+layout: default
+title: Writing samples
+permalink: /writing_samples.html
+---
     <div>
         <p>
             <h2>Release notes</h2>
@@ -43,5 +40,3 @@
         </p>
 
     </div>
-</body>
-</html>
