Update navigation bar style

--- a/writing_samples.html
+++ b/writing_samples.html
@@ -25,8 +25,8 @@ permalink: /writing_samples.html
         <p>
             <h2>Tutorials</h2>
             <ul>
-                <li><a href="assets/writing samples/How can I embed the inline payment widget_modified">How can I embed the inline payment widget?</a></li>
-                <li><a href="https://www.qnap.com/en/how-to/tutorial/article/how-to-use-koimeeter">How to use Koimeeter</a></li>
+                <li><a href="assets/writing samples/How can I embed the inline payment widget_modified">How Can I Embed the inline Payment Widget?</a></li>
+                <li><a href="https://www.qnap.com/en/how-to/tutorial/article/how-to-use-koimeeter">How To Use Koimeeter?</a></li>
             </ul>
         </p>
 
