--- a/gallery.html
+++ b/gallery.html
@@ -173,5 +173,7 @@ permalink: /gallery.html
     </div>
 </div>    
     <!-- end thumbnail container 10 -->       
-</div>  
-<!-- END GALLERY CODE -->
+</div>
+    </div>
+<!-- END GALLERY CODE -->    
+<footer> &copy;Judy Lin 2024 all rights reserved</footer>  
