Adjust footer and copyright

--- a/gallery.html
+++ b/gallery.html
@@ -175,4 +175,5 @@ permalink: /gallery.html
     <!-- end thumbnail container 10 -->       
 </div>
     </div>
-<!-- END GALLERY CODE -->    
+<!-- END GALLERY CODE --> 
+ <section>&copy; Judy Lin 2024 All Rights Reserved</section> 
