--- a/writing_samples.html
+++ b/writing_samples.html
@@ -38,5 +38,5 @@ permalink: /writing_samples.html
                 <li><a href="https://github.com/Codecademy/docs/issues/4800">Codecademy Docs</a></li>
             </ul>   
         </p>
-
     </div>
+    <section>&copy; Judy Lin 2024 All Rights Reserved</section>
