Update About Me

--- a/gallery.html
+++ b/gallery.html
@@ -176,4 +176,4 @@ permalink: /gallery.html
 </div>
     </div>
 <!-- END GALLERY CODE --> 
- <section>&copy; Judy Lin 2024 All Rights Reserved</section> 
+ <footer class="copyright">&copy; Judy Lin 2024 All Rights Reserved</footer> 
