--- a/writing_samples.html
+++ b/writing_samples.html
@@ -19,13 +19,13 @@ permalink: /writing_samples.html
                 <li><a href="assets/writing samples/Service Cycle Guide EN _v2023013_no_logo.pdf">Service Cycle Guide</a></li>
             </ul>
         </p>
-            
+    
     </div>
     <div>
         <p>
             <h2>Tutorials</h2>
             <ul>
-                <li><a href="assets/writing samples/How can I embed the inline payment widget_modified">How Can I Embed the inline Payment Widget?</a></li>
+                <li><a href="assets/writing samples/How can I embed the inline payment widget_modified.md">How Can I Embed the inline Payment Widget?</a></li>
                 <li><a href="https://www.qnap.com/en/how-to/tutorial/article/how-to-use-koimeeter">How To Use Koimeeter?</a></li>
             </ul>
         </p>
