Edit writing samples html

--- a/gallery.html
+++ b/gallery.html
@@ -176,4 +176,8 @@ permalink: /gallery.html
 </div>
     </div>
 <!-- END GALLERY CODE --> 
- <footer class="copyright">&copy; Judy Lin 2024 All Rights Reserved</footer> 
+<section id="copyright">
+    <align="center">
+    &copy; Judy Lin 2024 All Rights Reserved
+    </align>
+</section>
