--- a/writing_samples.html
+++ b/writing_samples.html
@@ -3,6 +3,19 @@ layout: default
 title: Writing samples
 permalink: /writing_samples.html
 ---
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Writing samples</title>
+</head>
+<body>
+    
+</body>
+</html>
+<html>
+    <body>
     <div>
         <p>
             <h2>Release notes</h2>
@@ -40,3 +53,5 @@ permalink: /writing_samples.html
         </p>
     </div>
     <section>&copy; Judy Lin 2024 All Rights Reserved</section>
+    </body>
+</html>
