Update API writing sample

--- a/writing_samples.html
+++ b/writing_samples.html
@@ -10,15 +10,10 @@ permalink: /writing_samples.html
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Writing samples</title>
 </head>
-<body>
-    
-</body>
-</html>
-<html>
     <body>
     <div>
         <p>
-            <h2>Release notes</h2>
+            <h2 id="release_notes">Release notes</h2>
             <ul>
                 <li><a href="assets/writing samples/release_note_sample.pdf">CS Platform ver. 1.0.13 Release Note</a></li>
             </ul>
@@ -26,17 +21,15 @@ permalink: /writing_samples.html
     </div>
     <div>
         <p>
-            <h2>User guides</h2>
+            <h2 id="user_guides">User guides</h2>
             <ul>
                 <li><a href="assets/writing samples/CS platform ver 1.0.13 installation guide.pdf">CS Platform ver. 1.0.13 Installation Guide</a></li>
-                <li><a href="assets/writing samples/Service Cycle Guide EN _v2023013_no_logo.pdf">Service Cycle Guide</a></li>
-            </ul>
         </p>
     
     </div>
     <div>
         <p>
-            <h2>Tutorials</h2>
+            <h2 id="tutorials">Tutorials</h2>
             <ul>
                 <li><a href="assets/writing samples/How can I embed the inline payment widget_modified.md">How Can I Embed the inline Payment Widget?</a></li>
                 <li><a href="https://www.qnap.com/en/how-to/tutorial/article/how-to-use-koimeeter">How To Use Koimeeter?</a></li>
@@ -46,12 +39,16 @@ permalink: /writing_samples.html
     </div>
     <div>
         <p>         
-            <h2>Open source projects</h2>
+            <h2 id="open_source">Open source projects</h2>
             <ul>
                 <li><a href="https://github.com/Codecademy/docs/issues/4800">Codecademy Docs</a></li>
             </ul>   
         </p>
     </div>
-    <section>&copy; Judy Lin 2024 All Rights Reserved</section>
+    <section id="copyright">
+        <align="center">
+        &copy; Judy Lin 2024 All Rights Reserved
+        </align>
+    </section>
     </body>
 </html>
