--- a/writing_samples.html
+++ b/writing_samples.html
@@ -31,7 +31,7 @@ permalink: /writing_samples.html
         <p>
             <h2 id="tutorials">Tutorials</h2>
             <ul>
-                <li><a href="assets/writing samples/How can I embed the inline payment widget_modified.md">How Can I Embed the inline Payment Widget?</a></li>
+                <li><a href="assets/writing samples/How_can_I_embed_the_inline_payment_widget_modified.md">How Can I Embed the inline Payment Widget?</a></li>
                 <li><a href="https://www.qnap.com/en/how-to/tutorial/article/how-to-use-koimeeter">How To Use Koimeeter?</a></li>
             </ul>
         </p>
