Update writing samples page

--- a/writing_samples.html
+++ b/writing_samples.html
@@ -15,7 +15,7 @@ permalink: /writing_samples.html
         <p>
             <h2 id="release_notes">Release notes</h2>
             <ul>
-                <li><a href="assets/writing samples/release_note_sample.pdf">CS Platform ver. 1.0.13 Release Note</a></li>
+                <li><a href="assets/writing samples/release_note_sample.pdf" target="_blank">CS Platform ver. 1.0.13 Release Note</a></li>
             </ul>
         </p>
     </div>
@@ -23,7 +23,7 @@ permalink: /writing_samples.html
         <p>
             <h2 id="user_guides">User guides</h2>
             <ul>
-                <li><a href="assets/writing samples/CS platform ver 1.0.13 installation guide.pdf">CS Platform ver. 1.0.13 Installation Guide</a></li>
+                <li><a href="assets/writing samples/CS platform ver 1.0.13 installation guide.pdf" target="_blank">CS Platform ver. 1.0.13 Installation Guide</a></li>
         </p>
     
     </div>
@@ -31,8 +31,8 @@ permalink: /writing_samples.html
         <p>
             <h2 id="tutorials">Tutorials</h2>
             <ul>
-                <li><a href="assets/writing samples/How_can_I_embed_the_inline_payment_widget_modified.md">How Can I Embed the inline Payment Widget?</a></li>
-                <li><a href="https://www.qnap.com/en/how-to/tutorial/article/how-to-use-koimeeter">How To Use Koimeeter?</a></li>
+                <li><a href="assets/writing samples/How_can_I_embed_the_inline_payment_widget.md" target="_blank">How Can I Embed the inline Payment Widget?</a></li>
+                <li><a href="https://www.qnap.com/en/how-to/tutorial/article/how-to-use-koimeeter" target="_blank">How To Use Koimeeter?</a></li>
             </ul>
         </p>
 
@@ -41,7 +41,7 @@ permalink: /writing_samples.html
         <p>         
             <h2 id="open_source">Open source projects</h2>
             <ul>
-                <li><a href="https://github.com/Codecademy/docs/issues/4800">Codecademy Docs</a></li>
+                <li><a href="https://github.com/Codecademy/docs/issues/4800" target="_blank">Codecademy Docs</a></li>
             </ul>   
         </p>
     </div>
