Add nav tags to page

--- a/writing_samples.html
+++ b/writing_samples.html
@@ -11,9 +11,11 @@ permalink: /writing_samples.html
     <title>Writing samples</title>
 </head>
     <body>
+    <nav>
     <div>
         <p>
             <h2 id="release_notes">Release notes</h2>
+            
             <ul>
                 <li><a href="assets/writing samples/release_note_sample.pdf" target="_blank">CS Platform ver. 1.0.13 Release Note</a></li>
             </ul>
@@ -45,6 +47,7 @@ permalink: /writing_samples.html
             </ul>   
         </p>
     </div>
+    </nav>
     <section id="copyright">
         <align="center">
         &copy; Judy Lin 2024 All Rights Reserved
