--- a/writing_samples.html
+++ b/writing_samples.html
@@ -33,7 +33,7 @@ permalink: /writing_samples.html
         <p>
             <h2 id="tutorials">Tutorials</h2>
             <ul>
-                <li><a href="assets/writing samples/how_can_I_embed_the_inline_payment_widget_test.txt" target="_blank">How Can I Embed the inline Payment Widget?</a></li>
+                <li><a href="assets/writing samples/how_can_I_embed_the_inline_payment_widget_test.md" target="_blank">How Can I Embed the inline Payment Widget?</a></li>
                 <li><a href="https://www.qnap.com/en/how-to/tutorial/article/how-to-use-koimeeter" target="_blank">How To Use Koimeeter?</a></li>
             </ul>
         </p>
