Update gallery description

--- a/gallery.html
+++ b/gallery.html
@@ -14,12 +14,12 @@ permalink: /gallery.html
 <div>
     <h2>Originals</h2>
     <p>
-    My original creations are called Miao Miao Bing (喵喵兵). 
-    The literal translation from Chinese would be "Kitty soldiers". 
-    They are inspired by UN Peacekeepers and Taiwan military. 
-    The message I hope to convey is that everyone can be a peace bearer.
-    We need an army of peacekeepers and peace lovers to stop the growing conflicts, hatred, and polarization around the globe.
-    Everyone can be peace facilitators by being kind, compassionate, and more understanding towards our neighbors and those different from us.</p>
+        My original creations are called Miao Miao Bing (喵喵兵). 
+        The literal translation from Chinese would be "Kitty soldiers". 
+        They are inspired by the UN Peacekeepers and the Taiwan military. 
+        The message I hope to convey is that everyone can be an ambassador of peace. 
+        We need an army of peacekeepers who are peace lovers to stop globally growing conflicts, hatred, and polarization. 
+        Everyone can become peace facilitators by being kind, compassionate, and more understanding towards our neighbors and those different from us.</p>
 </div>
 <!-- GALLERY 1 CODE STARTS HERE -->
 <!-- start gallery container -->
