--- a/gallery_test.html
+++ b/gallery_test.html
@@ -19,8 +19,12 @@
     </section>
     <section class="originals">
         <h2>Originals</h2>
-         <p>My original creations are called Miao Miao Bing (喵喵兵). The literal translation from Chinese would be "Kitty soldiers". They are inspired by UN Peacekeepers and Taiwan military. The message I hope to convey is that everyone can be a fighter for peace. We need an army of peacekeepers that are peace lovers to stop the growing conflicts, hatred, and polarization around the globe.
-        <section id="portfolio"> 
+        My original creations are called Miao Miao Bing (喵喵兵). 
+        The literal translation from Chinese would be "Kitty soldiers". 
+        They are inspired by the UN Peacekeepers and the Taiwan military. 
+        The message I hope to convey is that everyone can be an ambassador of peace. 
+        We need an army of peacekeepers who are peace lovers to stop globally growing conflicts, hatred, and polarization. 
+        Everyone can become peace facilitators by being kind, compassionate, and more understanding towards our neighbors and those different from us.</p>
             <section id="project">
                 <div class="project">
                 <img class="project__image" src="assets/gallery/thumb/thumb_m2b_yuri_cat.png"/>
