--- a/gallery_test.html
+++ b/gallery_test.html
@@ -1,80 +1,83 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery</title>
-    <link rel="stylesheet" text="gallery.css" type="text/css">
-    <script src="assets/javascript/gallery.js"></script>
-</head>
-
-<body>
-
-    <section class="Intro">
+---
+layout: default
+title: gallery
+permalink: /gallery_test.html
+---
+    <div>
         <h1>Gallery</h1>
         <p>I draw as a hobby. Some of the artworks are originals while others are fan art.</p>
         <p>This gallery showcases a selection of illustrations. 
            If you'd like to view more images, please visit my  <a href="https://www.instagram.com/miao2bing/ ">public Instagram page</a>.
         </p>
-    </section>
-    <section class="originals">
+    </div>
+    <div>
         <h2>Originals</h2>
-        My original creations are called Miao Miao Bing (喵喵兵). 
-        The literal translation from Chinese would be "Kitty soldiers". 
-        They are inspired by the UN Peacekeepers and the Taiwan military. 
-        The message I hope to convey is that everyone can be an ambassador of peace. 
-        We need an army of peacekeepers who are peace lovers to stop globally growing conflicts, hatred, and polarization. 
-        Everyone can become peace facilitators by being kind, compassionate, and more understanding towards our neighbors and those different from us.</p>
-            <section id="project">
-                <div class="project">
-                <img class="project__image" src="assets/gallery/thumb/thumb_m2b_yuri_cat.png"/>
-                <p>Miao Miao</p>
-                <h3 class="grid__title">Miao Miao Bing</h3>
-                    <div class="grid__overlay">
-                    <button class="viewbutton">Zoom In</button>
-                    </div>
-                </div>
-                <div class="project">
-                <img class="project__image" src="assets/gallery/thumb/thumb_m2b_hana_cat.png" />
-                <p>Lieutenant Hana</p>
-                <h3 class="grid__title">Miao Miao Bing</h3>
-                <div class="grid__overlay">
-                    <button class="viewbutton">Zoom In</button>
-                </div>
-                </div>
-    
-                <div class="project">
-                <img class="project__image" src="assets/gallery/thumb/thumb_m2b_kris_cat.png" />
-                <p>Admiral Kris</p>
-                <h3 class="grid__title">Miao Miao Bing</h3>
-                <div class="grid__overlay">
-                <button class="viewbutton">Zoom In</button>
-                </div>
-                </div>
-    
-                <div class="project">
-                <img class="project__image" src="assets/gallery/thumb/thumb_m2b_black_cat.png" />
-                <p>Intelligence officer Blackie</p>
-                <h3 class="grid__title">Miao Miao Bing</h3>
-                <div class="grid__overlay">
-                    <button class="viewbutton">Zoom In</button>
-                </div>
-                </div>
-                <div class="project">
-                <img class="project__image" src="assets/gallery/thumb/thumb_m2b_orange_cat.png" />
-                <p>Sailor Orange</p>
-                <h3 class="grid__title">Miao Miao Bing</h3>
-                <div class="grid__overlay">
-                    <button class="viewbutton">Zoom In</button>
-                </div>
-                </div>
-                <div class="overlay">
-                <div class="overlay__inner">
-                    <button class="close">close X</button>
-                    <img>
-                </div>
-                </div>
+        <p>
+            My original creations are called Miao Miao Bing (喵喵兵). 
+            The literal translation from Chinese would be "Kitty soldiers". 
+            They are inspired by the UN Peacekeepers and the Taiwan military. 
+            The message I hope to convey is that everyone can be an ambassador of peace. 
+            We need an army of peacekeepers who are peace lovers to stop globally growing conflicts, hatred, and polarization. 
+            Everyone can become peace facilitators by being kind, compassionate, and more understanding towards our neighbors and those different from us.</p>
+    </div>
+   </section> 
+  <div class="gallery-image">
+    <div class="img-box">
+      <img src="assets/gallery/full/m2b_yuri_cat.png" alt="Gray cat soldier" />
+      <div class="transparent-box">
+        <div class="caption">
+          <p>Yuri</p>
+          <p class="opacity-low">Soldier</p>
+        </div>
+      </div> 
+    </div>
+    <div class="img-box">
+      <img src="assets/gallery/full/m2b_hana_cat.png" alt="Tabby cat soldier" />
+      <div class="transparent-box">
+        <div class="caption">
+          <p>Hana</p>
+          <p class="opacity-low">Lieutenant</p>
+        </div>
+      </div>
+    </div>
+    <div class="img-box">
+      <img src="assets/gallery/full/m2b_kris_cat.png" alt="British short hair cat dressed as an admiral" />
+      <div class="transparent-box">
+        <div class="caption">
+          <p>Kris</p>
+          <p class="opacity-low">Admiral</p>
+        </div>
+      </div>
+    </div>
+    <div class="img-box">
+      <img src="assets/gallery/full/m2b_black_cat.png" alt="A black cat dressed as an intelligence officer." />
+      <div class="transparent-box">
+        <div class="caption">
+          <p>Blackie</p>
+          <p class="opacity-low">Intelligence officer</p>
+        </div>
+      </div> 
+    </div>
+    <div class="img-box">
+      <img src="assets/gallery/full/m2b_orange_cat.png" alt="An orange cat dressed as a sailor." />
+      <div class="transparent-box">
+        <div class="caption">
+          <p>Orange</p>
+          <p class="opacity-low">Navy officer</p>
+        </div>
+      </div> 
+    </div>
+      </div> 
+    </div>
+  </div>
+  <section class="copyright">
+    <align="center">
+    &copy; Judy Lin 2024 All Rights Reserved
+    </align>
   </section>
-    </section> 
+</body>
+</html>
+<!-- partial -->
+  
 </body>
 </html>
