--- a/gallery_test2.html
+++ b/gallery_test2.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: gallery
-permalink: /gallery_test.html
+permalink: /gallery_test2.html
 ---
     <div>
         <h1>Gallery</h1>
