Test import gallery css stylesheet

--- a/gallery_test2.html
+++ b/gallery_test2.html
@@ -21,55 +21,62 @@ permalink: /gallery_test2.html
             Everyone can become peace facilitators by being kind, compassionate, and more understanding towards our neighbors and those different from us.</p>
     </div>
    </section> 
-  <div class="gallery-image">
-    <div class="img-box">
-      <img src="assets/gallery/full/m2b_yuri_cat.png" alt="Gray cat soldier" />
-      <div class="transparent-box">
-        <div class="caption">
-          <p>Yuri</p>
-          <p class="opacity-low">Soldier</p>
-        </div>
-      </div> 
-    </div>
-    <div class="img-box">
-      <img src="assets/gallery/full/m2b_hana_cat.png" alt="Tabby cat soldier" />
-      <div class="transparent-box">
-        <div class="caption">
-          <p>Hana</p>
-          <p class="opacity-low">Lieutenant</p>
+  <section class="images">
+    <div class="gallery-image">
+      <div class="img-box">
+        <img src="assets/gallery/full/m2b_yuri_cat.png" alt="Gray cat soldier" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>Yuri</p>
+            <p class="opacity-low">Soldier</p>
+          </div>
+        </div> 
+      </div>
+      <div class="img-box">
+        <img src="assets/gallery/full/m2b_hana_cat.png" alt="Tabby cat soldier" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>Hana</p>
+            <p class="opacity-low">Lieutenant</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="img-box">
-      <img src="assets/gallery/full/m2b_kris_cat.png" alt="British short hair cat dressed as an admiral" />
-      <div class="transparent-box">
-        <div class="caption">
-          <p>Kris</p>
-          <p class="opacity-low">Admiral</p>
+      <div class="img-box">
+        <img src="assets/gallery/full/m2b_kris_cat.png" alt="British short hair cat dressed as an admiral" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>Kris</p>
+            <p class="opacity-low">Admiral</p>
+          </div>
         </div>
       </div>
+      <div class="img-box">
+        <img src="assets/gallery/full/m2b_black_cat.png" alt="A black cat dressed as an intelligence officer." />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>Blackie</p>
+            <p class="opacity-low">Intelligence officer</p>
+          </div>
+        </div> 
+      </div>
+      <div class="img-box">
+        <img src="assets/gallery/full/m2b_orange_cat.png" alt="An orange cat dressed as a sailor." />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>Orange</p>
+            <p class="opacity-low">Navy officer</p>
+          </div>
+        </div> 
+      </div>
+        </div> 
+      </div>
     </div>
-    <div class="img-box">
-      <img src="assets/gallery/full/m2b_black_cat.png" alt="A black cat dressed as an intelligence officer." />
-      <div class="transparent-box">
-        <div class="caption">
-          <p>Blackie</p>
-          <p class="opacity-low">Intelligence officer</p>
-        </div>
-      </div> 
-    </div>
-    <div class="img-box">
-      <img src="assets/gallery/full/m2b_orange_cat.png" alt="An orange cat dressed as a sailor." />
-      <div class="transparent-box">
-        <div class="caption">
-          <p>Orange</p>
-          <p class="opacity-low">Navy officer</p>
-        </div>
-      </div> 
-    </div>
-      </div> 
-    </div>
-  </div>
+
+
+
+
+  </section> 
+  
   <section class="copyright">
     <align="center">
     &copy; Judy Lin 2024 All Rights Reserved
