--- a/gallery_test2.html
+++ b/gallery_test2.html
@@ -1,8 +1,7 @@
----
-layout: default
-title: gallery
-permalink: /gallery_test2.html
----
+
+<link rel="stylesheet" href="assets/css/beautifuljekyll.css" type="text/css">
+<link rel="stylesheet" href="assets/css/gallery.css" type="text/css">
+<section class= "intro">
     <div>
         <h1>Gallery</h1>
         <p>I draw as a hobby. Some of the artworks are originals while others are fan art.</p>
@@ -10,6 +9,8 @@ permalink: /gallery_test2.html
            If you'd like to view more images, please visit my  <a href="https://www.instagram.com/miao2bing/ ">public Instagram page</a>.
         </p>
     </div>
+</section>
+<section class= "originals">   
     <div>
         <h2>Originals</h2>
         <p>
