--- a/writing_samples.html
+++ b/writing_samples.html
@@ -42,8 +42,9 @@ permalink: /writing_samples.html
     <div>
         <p>         
             <h2 id="open_source">Open source projects</h2>
+            <p><strong>Codecademy Docs</strong></p>
             <ul>
-                <li><a href="https://github.com/Codecademy/docs/issues/4800" target="_blank">Codecademy Docs</a></li>
+                <li><a href=https://www.codecademy.com/resources/docs/python/sets/clear target="_blank">Python `sets.clear`</a></li>
             </ul>   
         </p>
     </div>
