--- a/gallery_test2.html
+++ b/gallery_test2.html
@@ -1,15 +1,21 @@
 
-<link rel="stylesheet" href="assets/css/beautifuljekyll.css" type="text/css">
-<link rel="stylesheet" href="assets/css/gallery.css" type="text/css">
+<html>
+  <head>
+    <link rel="stylesheet" href="assets/css/beautifuljekyll.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/gallery.css" type="text/css">
+  </head>
+<body>
+  <header>
 <section class= "intro">
     <div>
-        <h1>Gallery</h1>
+        <a href="https://linchihj.github.io/"><h1>Gallery</h1></a>
         <p>I draw as a hobby. Some of the artworks are originals while others are fan art.</p>
         <p>This gallery showcases a selection of illustrations. 
            If you'd like to view more images, please visit my  <a href="https://www.instagram.com/miao2bing/ ">public Instagram page</a>.
         </p>
     </div>
 </section>
+
 <section class= "originals">   
     <div>
         <h2>Originals</h2>
@@ -83,3 +89,5 @@
     &copy; Judy Lin 2024 All Rights Reserved
     </align>
   </section>
+  </body>
+</html>
